// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarFieldExport Component should aggregate export service calls: createExport 1`] = `
[
  [
    "mock-product-id",
    {
      "data": {
        "lorem": "ipsum",
      },
    },
  ],
]
`;

exports[`ToolbarFieldExport Component should aggregate export status, polling status with a hook: status, basic 1`] = `
{
  "isProductPending": false,
  "pendingProductFormats": [],
}
`;

exports[`ToolbarFieldExport Component should aggregate export status, polling status with a hook: status, completed 1`] = `
{
  "isProductPending": false,
  "pendingProductFormats": [],
}
`;

exports[`ToolbarFieldExport Component should aggregate export status, polling status with a hook: status, polling 1`] = `
{
  "isProductPending": true,
  "pendingProductFormats": [
    "dolorSit",
  ],
}
`;

exports[`ToolbarFieldExport Component should export select options: toolbarFieldOptions 1`] = `
[
  {
    "selected": false,
    "title": "t(curiosity-toolbar.label_export, {"context":"json"})",
    "value": "json",
  },
]
`;

exports[`ToolbarFieldExport Component should handle updating export through redux state with component: dispatch, component 1`] = `[]`;

exports[`ToolbarFieldExport Component should handle updating export through redux state with hook: dispatch, hook 1`] = `[]`;

exports[`ToolbarFieldExport Component should render a basic component: basic 1`] = `
<ToolbarFieldExport
  options={
    [
      {
        "selected": false,
        "title": "t(curiosity-toolbar.label_export, {"context":"json"})",
        "value": "json",
      },
    ]
  }
  position="left"
  t={[Function]}
  useExport={[Function]}
  useExportStatus={[Function]}
  useOnSelect={[Function]}
/>
`;
